@@ -47,8 +47,7 @@ jacocoTestReport {
 
     afterEvaluate {
         classDirectories = files(classDirectories.files.collect {
-            fileTree(dir: it, exclude: ['**/ThreadIdConverter.class',
-                                        '**/MediaConstraints.class',
+            fileTree(dir: it, exclude: ['**/MediaConstraints.class',
                                         '**/stickerify/process/**',
                                         '**/stickerify/runner**',
                                         '**/stickerify/telegram/**'])
@@ -67,20 +66,22 @@ java {
 }
 
 tasks.withType(JavaCompile).configureEach {
+    options.compilerArgs.add('--enable-preview')
     options.encoding = 'UTF-8'
 }
 
 test {
+    jvmArgs('--enable-preview')
     useJUnitPlatform()
     finalizedBy(jacocoTestReport)
 }
 
 application {
-    mainClass = 'com.github.stickerifier.stickerify.runner.Main'
+    mainClass = 'Main'
 }
 
 runtime {
-    options = ['--strip-debug', '--no-header-files', '--no-man-pages', '--compress=2']
+    options = ['--strip-debug', '--no-header-files', '--no-man-pages']
     modules = ['java.desktop', 'java.naming', 'java.sql', 'jdk.crypto.ec']
 }
 
